trying to push chages

--- a/Redis/Redis.ipynb
+++ b/Redis/Redis.ipynb
@@ -57,72 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dced11fd",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Mileage</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Vin</th>\n",
-       "      <th>Make</th>\n",
-       "      <th>Model</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8995</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>35725</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>19VDE2E53EE000083</td>\n",
-       "      <td>Acura</td>\n",
-       "      <td>ILX6-Speed</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Price  Year  Mileage     City State                Vin   Make       Model\n",
-       "0   8995  2014    35725  El Paso    TX  19VDE2E53EE000083  Acura  ILX6-Speed"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "id": "f10dc373",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "df_carList = pd.read_csv(\"./datasets/Car_listings.csv\", delimiter=\",\")\n",
-    "df_carList.head(1)"
+    "df_carList = pd.read_csv(\"./datasets/Car_listings.csv\", delimiter=\",\")"
    ]
   },
   {
