--- a/Redis/Redis.ipynb
+++ b/Redis/Redis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dbb5887b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f10dc373",
    "metadata": {},
    "outputs": [],
@@ -76,12 +76,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4d11bd19",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Mileage</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Vin</th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>35725</td>\n",
+       "      <td>El Paso</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>19VDE2E53EE000083</td>\n",
+       "      <td>Acura</td>\n",
+       "      <td>ILX6-Speed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Mileage     City State                Vin   Make       Model\n",
+       "0  2014    35725  El Paso    TX  19VDE2E53EE000083  Acura  ILX6-Speed"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_carList = df_carList.drop(['Price'], axis = 1)\n",
     "df_carList.head(1)"
@@ -89,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7f38daf3",
    "metadata": {},
    "outputs": [],
@@ -107,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "00ad77ec",
    "metadata": {},
    "outputs": [],
@@ -117,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "28544ca5",
    "metadata": {},
    "outputs": [],
@@ -147,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "78e1d09e",
    "metadata": {},
    "outputs": [],
@@ -159,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "21835c5e",
    "metadata": {},
    "outputs": [],
@@ -170,10 +225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f2bf5019",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data: [2004, 38235, 'Marietta', ' GA', 'WDBSK75FX4F069367', 'Mercedes-Benz', 'SL-ClassSL500']\n"
+     ]
+    }
+   ],
    "source": [
     "with open('./datasets/cars.json') as json_file:\n",
     "    data = json.load(json_file)\n",
@@ -282,12 +346,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "902ee546",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Year': 2012,\n",
+       " 'Mileage': 104716,\n",
+       " 'City': 'Tempe',\n",
+       " 'State': ' AZ',\n",
+       " 'Vin': '1HGCP2F67CA001727',\n",
+       " 'Make': 'Honda',\n",
+       " 'Model': 'Accord'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "read_dict = r.get(200000)\n",
     "yourdict = pickle.loads(read_dict)\n",
@@ -1240,18 +1321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "7c8065a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python application.py"
    ]
